Fix e.g. calendar page overflowing

--- a/app/components/layout/index.module.css
+++ b/app/components/layout/index.module.css
@@ -1,5 +1,7 @@
 .container {
-	width: 100%;
+	flex: 1;
+	min-width: 0;
+	overflow-x: hidden;
 }
 
 .header {
